--- a/pokestore/src/style.css
+++ b/pokestore/src/style.css
@@ -1,4 +1,12 @@
-.App {
+.app {
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.poke {
+    display: flex;
+    flex-direction: column;
     text-align: center;
 }
 
@@ -7,4 +15,15 @@
     padding: 30px;
     border: 1px solid palevioletred;
     text-align: left;
+}
+
+.cart {
+    margin: 15px;
+    padding: 30px;
+    border: 3px solid palevioletred;
+    text-align: left;
+}
+
+.title {
+    text-align: center;
 }
