--- a/pokestore/src/style.css
+++ b/pokestore/src/style.css
@@ -1,27 +1,65 @@
 .app {
     display: flex;
+    flex-direction: row;
     text-align: center;
-    justify-content: space-around;
+    justify-content: center;
+}
+
+h1{
+    color: palevioletred;
+}
+
+.pokemon {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+    width: 60%;
 }
 
 .poke {
     display: flex;
     flex-direction: column;
+    width: 30%;
+    margin: 15px;
+    padding: 15px;
     text-align: center;
 }
 
-.pokemon {
-    margin: 15px;
-    padding: 30px;
-    border: 1px solid palevioletred;
-    text-align: left;
+.photo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+}
+
+.photo-cart {
+    width: 20%;
+    margin: 5%;
+}
+
+.button {
+    margin: 10px;
 }
 
 .cart {
-    margin: 15px;
-    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    height: 20%;
+    width: 20%;
+    margin: 10px;
+    padding: 10px;
     border: 3px solid palevioletred;
-    text-align: left;
+    text-align: center;
+}
+
+.item {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.total {
+    color: palevioletred;
+    font-weight: bold;
 }
 
 .title {
