--- a/simple_pokestore/src/style.css
+++ b/simple_pokestore/src/style.css
@@ -26,6 +26,10 @@ h1{
     text-align: center;
 }
 
+p:first-letter {
+    text-transform:capitalize;
+}
+
 .photo {
     margin-left: auto;
     margin-right: auto;
